# ringrtc

./: .dockerignore  .flake8  .gitignore  BUILDING.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  SignalRingRTC.podspec  build.gradle  gradle.properties  local.properties  rust-toolchain  rustfmt.toml  settings.gradle
call_sim/: .gitignore  Cargo.toml  README.md  build.rs
call_sim/config/local/: client.json
call_sim/docker/pesq_mos/: Dockerfile  pesq_mos.py
call_sim/docker/plc_mos/: Dockerfile
call_sim/docker/ringrtc/: Dockerfile  wireplumber-no-hardware.conf
call_sim/docker/signaling_server/: .dockerignore  Cargo.toml  Dockerfile  build.rs
call_sim/docker/signaling_server/.cargo/: audit.toml
call_sim/docker/signaling_server/src/: main.rs
call_sim/docker/visqol_mos/: Dockerfile
call_sim/proto/: call_sim.proto
call_sim/src/: audio.rs  common.rs  config.rs  docker.rs  main.rs  report.rs  test.rs
mrp/: Cargo.toml
mrp/src/: lib.rs  merge_buffer.rs  stream.rs  window.rs
protobuf/: Cargo.toml  build.rs
protobuf/protobuf/: assets.proto  call_sim.proto  call_summary.proto  group_call.proto  rtp_data.proto  signaling.proto
protobuf/src/: lib.rs
src/: BUILD.gn
src/android/: AndroidManifest.xml  BUILD.gn  README  build.gradle  proguard-rules.pro
src/android/jniLibs/: .gitignore
src/android/libs/: .gitignore
src/android/src/main/: AndroidManifest.xml
src/ios/: .gitignore  README
src/ios/SignalRingRTC/: CARGO_BUILD_TARGET.xcconfig  Gemfile  Package.swift  Podfile
src/ios/SignalRingRTC/Scripts/: precommit.py
src/ios/SignalRingRTC/SignalRingRTC/: Assertions.swift  CallConnection.swift  CallConnectionBridge.m  CallConnectionFactory.swift  CallConnectionGlobal.swift  CallConnectionLogger.swift  CallConnectionObserver.swift  CallConnectionRecipient.swift  CallConnectionUtil.swift  CallContext.swift  CallLinks.swift  CallManager.swift  CallManagerGlobal.swift  CallManagerInterface.swift  CallManagerLogger.swift  CallManagerUtil.swift  CallManagerVideoCapture.swift  CallSummary.swift  Connection.swift  ConnectionMediaStream.swift  FFI.swift  GroupCall.swift  HTTP.swift  Logging.swift  RingValidation.swift  SFU.swift  SignalRingRTC.h  SignalRingRTC.modulemap  VideoCaptureController.swift
src/ios/SignalRingRTC/SignalRingRTC.xcodeproj/: project.pbxproj
src/ios/SignalRingRTC/SignalRingRTC.xcworkspace/: contents.xcworkspacedata
src/ios/SignalRingRTC/SignalRingRTCTests/: AudioDeviceModuleForTests.swift  CallLinkTests.swift  SignalRingRTCTests.swift  TestGroupCallDelegate.swift
src/node/: .eslintignore  .eslintrc.js  .gitignore  .oxlintrc.json  index.ts  package-lock.json  package.json  tsconfig.json
src/node/ringrtc/: CallLinks.ts  CallSummary.ts  Native.ts  Service.ts  VideoSupport.ts
src/node/scripts/: build-help.sh  copy_repo.sh  fetch-prebuild.js  prepublish.js
src/node/test/: CallingClass.ts  RingRTC-test.ts  Utils.ts
src/rffi/: BUILD.gn
src/rffi/api/: data_channel.h  data_channel_intf.h  injectable_network.h  logging.h  media.h  network.h  peer_connection_factory.h  peer_connection_interface_intf.h  peer_connection_intf.h  peer_connection_observer_intf.h  ref_count.h  rffi_defs.h  sdp_observer_intf.h  stats_observer_intf.h
src/rffi/api/android/: media_stream_intf.h  peer_connection_interface_intf.h  peer_connection_intf.h
src/rffi/config/: rffi_include.lst
src/rffi/src/: data_channel.cc  data_channel_observer.cc  data_channel_observer.h  injectable_network.cc  logging.cc  media.cc  network.cc  peer_connection.cc  peer_connection_factory.cc  peer_connection_interface.cc  peer_connection_observer.cc  peer_connection_observer.h  ptr.h  ref_count.cc  sdp_observer.cc  sdp_observer.h  stats_observer.cc  stats_observer.h
src/rffi/src/android/: java_media_stream.cc  jni_peer_connection.cc  jni_peer_connection_interface.cc
src/rust/: BUILD.gn  Cargo.toml  build.rs  cargo.py  cbindgen.toml  clippy.toml  make-protos  rustfmt.license-template  rustfmt.toml  strip.py
src/rust/android-linker-workaround/: README
src/rust/protobuf/: README  data_channel.proto  group_call.proto  protobuf_gen.rs  rtp_data.proto  signaling.proto
src/rust/regex-aot/: Cargo.toml
src/rust/regex-aot/src/: lib.rs
src/rust/scripts/: cargo.py  clippy.py  format-code  make-protos  run-tests  strip.py
src/rust/src/: call_link_test_client.rs  cli.rs  electron.rs  gctc.rs  lib.rs  native.rs  protobuf.rs  virtual_audio.rs
src/rust/src/android/: android_platform.rs  call_connection.rs  call_connection_factory.rs  call_connection_observer.rs  call_manager.rs  error.rs  jni_util.rs  logging.rs  types.rs  webrtc_java_media_stream.rs  webrtc_peer_connection_factory.rs
src/rust/src/common/: actor.rs  jni_signature.rs  mod.rs  slice.rs  time.rs  units.rs  versioning.rs
src/rust/src/core/: assets.rs  bandwidth_mode.rs  call.rs  call_connection.rs  call_connection_factory.rs  call_connection_observer.rs  call_fsm.rs  call_manager.rs  call_mutex.rs  call_rwlock.rs  call_summary.rs  connection.rs  connection_fsm.rs  crypto.rs  endorsements.rs  group_call.rs  http_client.rs  platform.rs  sfu_client.rs  signaling.rs  util.rs
src/rust/src/error/: mod.rs
src/rust/src/gctc/: main.rs
src/rust/src/ios/: call_connection.rs  call_connection_factory.rs  call_connection_observer.rs  call_manager.rs  error.rs  ios_media_stream.rs  ios_platform.rs  ios_util.rs  logging.rs  webrtc_app_media_stream.rs  webrtc_app_peer_connection.rs  webrtc_ios_media_stream.rs
src/rust/src/lite/: call_links.rs  ffi.rs  http.rs  logging.rs  sfu.rs
src/rust/src/protobuf/: data_channel.rs  group_call.rs  rtp_data.rs  signaling.rs
src/rust/src/sim/: call_connection_factory.rs  call_connection_observer.rs  error.rs  sim_platform.rs
src/rust/src/simnet/: actor.rs  router.rs  units.rs
src/rust/src/webrtc/: arc.rs  audio_device_module.rs  audio_device_module_utils.rs  data_channel.rs  data_channel_observer.rs  (+16 more)
src/rust/tests/: incoming.rs  integration.rs  outgoing.rs
webrtc-sys/: Cargo.toml  build.rs
webrtc-sys/libwebrtc/: .gclient.apple  .gclient.unix  .gclient.windows  .gitignore
(+133 files in other folders)
