#
# Copyright 2019-2022 Signal Messenger, LLC
# SPDX-License-Identifier: AGPL-3.0-only
#

[workspace]
resolver = "2"
members = [
    "call_sim",
    "mrp",
    "protobuf",
    "src/rust",
]

[workspace.package]
version = "2.50.1"
authors = ["Calling Team <callingteam@signal.org>"]

[workspace.dependencies]
aes = "0.8.4"
aes-gcm-siv = "0.11.1"
anyhow = "1.0.95"
base64 = "0.22.1"
bincode = "1.3.3"
bitvec = "1.0.1"
bollard = "0.17.1"
bytes = "1.10.0"
call_protobuf = { path = "protobuf" }
chrono = "0.4.39"
clap = "4.5.29"
ctr = "0.9.2"
cubeb = "0.22.0"
cubeb-core = "0.22.0"
env_logger = "0.11.6"
fern = "0.6.2"
futures-util = "0.3.31"
hex = "0.4.3"
hkdf = "0.12.4"
hmac = "0.12.1"
hound = "3.5.1"
itertools = "0.13.0"
jni = { version = "0.21.1", default-features = false }
lazy_static = "1.5.0"
libc = "0.2.169"
log = "0.4.25"
mrp = { path = "mrp" }
neon = { version = "1.0.0", default-features = false }
num_enum = "0.7.3"
plotly = "0.9.1"
proc-macro2 = "1.0.92"
prost = "0.13.5"
prost-build = "0.13.5"
protobuf = { path = "protobuf" }
quote = "1.0.37"
rand = "0.8.5"
rand_chacha = "0.3.1"
regex = "1.11.1"
regex-aot = { path = "src/rust/regex-aot" }
regex-automata = { version = "0.4.9", default-features = false }
relative-path = "1.9.3"
rustls = "0.23.23"
serde = "1.0.217"
serde_json = "1.0.138"
serde_with = "3.12.0"
sha2 = "0.10.8"
static_assertions = "1.1.0"
subtle = "2.6.1"
syn = "1.0.109"
thiserror = "1.0.69"
tokio = "1.43.0"
tonic = "0.12.3"
tonic-build = "0.12.3"
tower = "0.4.13"
ureq = "2.12.1"
uuid = "1.13.1"
x25519-dalek = "2.0.1"
zkgroup = { git = "https://github.com/signalapp/libsignal", tag = "v0.65.1" }

[patch.crates-io]
# Use our fork of curve25519-dalek for zkgroup compatibility.
curve25519-dalek = { git = 'https://github.com/signalapp/curve25519-dalek', tag = 'signal-curve25519-4.1.3' }
