#
# Copyright 2019-2022 Signal Messenger, LLC
# SPDX-License-Identifier: AGPL-3.0-only
#

[workspace]
resolver = "2"
members = [
    "call_sim",
    "mrp",
    "protobuf",
    "src/rust",
]

[workspace.package]
version = "2.62.0"
authors = ["Calling Team <callingteam@signal.org>"]

[patch.crates-io]
# Use our fork of curve25519-dalek for zkgroup compatibility.
curve25519-dalek = { git = 'https://github.com/signalapp/curve25519-dalek', tag = 'signal-curve25519-4.1.3' }
