#
# Copyright 2023 Signal Messenger, LLC
# SPDX-License-Identifier: AGPL-3.0-only
#

[package]
name = "call_sim"
version = "0.1.0"
authors = ["Calling Team <callingteam@signal.org>"]
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
bollard = { workspace = true }
protobuf = { workspace = true, features = ["call_sim"] }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
futures-util = { workspace = true }
hex = { workspace = true, features = ["serde"] }
hmac = { workspace = true }
hound = { workspace = true }
itertools = { workspace = true }
plotly = { workspace = true, features = ["kaleido"] }
prost = { workspace = true }
regex = { workspace = true }
relative-path = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "fs", "process"] }
tonic = { workspace = true }
tower = { workspace = true, features = ["timeout"] }
uuid = { workspace = true, features = ["v4", "fast-rng"] }
