#
# Copyright 2023 Signal Messenger, LLC
# SPDX-License-Identifier: AGPL-3.0-only
#

[package]
name = "call_sim"
version.workspace = true
authors.workspace = true
edition = "2024"
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1.0.99"
base64 = "0.22.1"
bollard = "0.17.1"
protobuf = { path = "../protobuf", features = ["call_sim"] }
chrono = "0.4.41"
clap = { version = "4.5.45", features = ["derive"] }
futures-util = "0.3.31"
hex = { version = "0.4.3", features = ["serde"] }
hmac = "0.12.1"
hound = "3.5.1"
itertools = "0.13.0"
plotters = {  version = "0.3.7", default-features = false, features = ["fontconfig-dlopen", "full_palette", "histogram", "line_series", "svg_backend", "ttf"] }
prost = "0.14.1"
regex = "1.11.1"
relative-path = "1.9.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sha2 = "0.10.9"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "time", "fs", "process"] }
tonic = "0.14.1"
tonic-prost = "0.14.1"
tower = { version = "0.4.13", features = ["timeout"] }
uuid = { version = "1.18.0", features = ["v4", "fast-rng"] }
