#
# Copyright 2024 Signal Messenger, LLC
# SPDX-License-Identifier: AGPL-3.0-only
#

[package]
name = "mrp"
version.workspace = true
authors.workspace = true
edition = "2021"
description = "A MRP library, a simple way to reliably send packets"
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1.0.95"
log = { version = "0.4.25", features = ["std", "max_level_trace", "release_max_level_info"] }
thiserror = "1.0.69"

[dev-dependencies]
rand = { version = "0.8.5", features = [] }
