#
# Copyright 2024 Signal Messenger, LLC
# SPDX-License-Identifier: AGPL-3.0-only
#

[package]
name = "protobuf"
edition = "2024"
version.workspace = true
authors.workspace = true
license = "AGPL-3.0-only"

[lib]
name = "protobuf"
path = "src/lib.rs"
proc-macro = true

[features]
default = ["signaling", "call_summary"]
signaling = []
call_sim = ["signaling"]
call_summary = []

[build-dependencies]
prost-build = "0.14.1"
tonic-prost-build = "0.14.2"
