#
# Copyright 2019-2021 Signal Messenger, LLC
# SPDX-License-Identifier: AGPL-3.0-only
#

if (is_android) {
  import("//build/config/android/config.gni")
  import("//build/config/android/rules.gni")
  import("//webrtc.gni")

  group("ringrtc") {
    public_deps = [
      "android",
      "rust",
    ]
  }
}

if (is_ios) {
  group("ringrtc") {
    # @note The RingRTC build is done outside of gn/ninja...
  }
}

if (is_linux || is_mac || is_win) {
  import("//webrtc.gni")

  rtc_library("ringrtc") {
    visibility = [ "*" ]

    include_dirs = [ "." ]

    defines = [ "ENABLE_RINGRTC" ]

    deps = [
      "//sdk:media_constraints",
    ]

    sources = [
      "rffi/src/injectable_network.cc",
      "rffi/src/logging.cc",
      "rffi/src/media.cc",
      "rffi/src/network.cc",
      "rffi/src/peer_connection_factory.cc",
      "rffi/src/peer_connection.cc",
      "rffi/src/peer_connection_observer.cc",
      "rffi/src/ref_count.cc",
      "rffi/src/sdp_observer.cc",
      "rffi/src/stats_observer.cc",
    ]
  }
}
