#
# Copyright 2019-2021 Signal Messenger, LLC
# SPDX-License-Identifier: AGPL-3.0-only
#

[package]
name = "ringrtc"
version.workspace = true
authors.workspace = true
edition = "2024"
description = "A Rust interface for WebRTC"
license = "AGPL-3.0-only"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[[bin]]
name = "direct"
required-features = ["direct"]

[[bin]]
name = "group_call"
required-features = ["native", "sim_http"]

[[bin]]
name = "call_link"
# This binary doesn't depend on WebRTC at all, so either `sim` or `native` would work.
required-features = ["uuid", "sim", "sim_http", "rand_chacha"]

[[bin]]
name = "call_sim-cli"
required-features = ["call_sim", "injectable_network"]

[dependencies]
regex-aot = { path = "regex-aot" }

aes               = { version = "0.8.4"  }
aes-gcm-siv       = { version = "0.11.1", features = ["aes"] }
anyhow            = { version = "1.0.100"    }
base64            = { version = "0.22.1" }
bytes             = { version = "1.11.0"    }
ctr               = { version = "0.9.2"  }
hmac              = { version = "0.12.1"   }
lazy_static       = { version = "1.5.0"    }
libc              = { version = "0.2.178"    }
log               = { version = "0.4.29", features = ["std", "max_level_trace", "release_max_level_info"] }
num_enum          = { version = "0.7.5"  }
prost             = { version = "0.14.1" }
rand              = { version = "0.8.5", features = [] }
regex-automata    = { version = "0.4.13", default-features = false, features = ["dfa", "perf", "std"] }
hkdf              = { version = "0.12.4"   }
serde_json        = { version = "1.0.145"    }
serde             = { version = "1.0.228", features = ["derive"] }
serde_with        = { version = "3.16.1", features = ["base64", "hex"] }
hex               = { version = "0.4.3", features = ["serde"] }
sha2              = { version = "0.10.9"  }
static_assertions = { version = "1.1.0"  }
subtle            = { version = "2.6.1"  }
thiserror         = { version = "2.0.17" }
x25519-dalek      = { version = "2.0.1", features = ["static_secrets"] }
strum             = { version = "0.27.2", features = ["derive"] }
strum_macros      = { version = "0.27.2" }
sketches-ddsketch = { version = "0.3.0" }

# Used by call links. Be careful not to pull in more than strictly needed, for both code size and
# maintenance reasons. In particular, anything involving credentials should be left to
# libsignal-client.
bincode = { version = "1.3.3" }
uuid = { version = "1.19.0", optional = true }
zkgroup = { git = "https://github.com/signalapp/libsignal", tag = "v0.86.7" }

# Optional, needed by the "electron" feature
neon = { version = "1.1.1", optional = true, default-features = false, features = ["napi-6"] }

# Optional, needed to check Android-specific code when not targeting Android
jni = { version = "0.21.1", optional = true, default-features = false }

# Optional, needed by the "http" feature
ureq = { version = "3.1.4", optional = true }
rustls = { version = "0.23.35", optional = true, features = ["ring"] }

# Optional, needed for call-link-test-client
rand_chacha = { version = "0.3.1", optional = true }

# Optional, needed by the "call_sim" feature
bitvec = {version = "1.0.1", optional = true }
clap = { version = "4.5.53", optional = true, features = ["derive"] }
fern = { version = "0.7.1", optional = true }
tokio = { version = "1.48.0", optional = true, features = ["rt-multi-thread"] }
tonic = { version = "0.14.2", optional = true }
tonic-prost = { version = "0.14.2", optional = true }
tower = { version = "0.5.2", optional = true, features = ["timeout"] }

# Optional, needed by the "direct" and "call_sim" feature
chrono = {version = "0.4.42", optional = true }

call_protobuf = { path = "../../protobuf", package = "protobuf"}
mrp = { path = "../../mrp" }

# Optional, needed by "native" feature
cubeb = {  version = "0.33.0", optional = true }
cubeb-core = {  version = "0.33.0", optional = true }
regex = {  version = "1.12.2", optional = true }

[target.'cfg(windows)'.dependencies]
# Only needed by native feature on windows
windows = { version = "0.62.2", optional = true, features = ["Win32_System_Com"] }

[target.'cfg(not(target_os="android"))'.dependencies]
# sysinfo depends on getgrgid_r, which was added in Android API level 24
sysinfo = { version = "0.37.2", default-features = false, features = ["system"] }

[features]
default = []
sim = []
electron = ["neon", "native"]
native = ["cubeb", "cubeb-core", "windows", "regex"]
prebuilt_webrtc = ["native"]
prebuilt_webrtc_sim = ["native", "simnet"]
simnet = ["injectable_network"]
injectable_network = []
sim_http = ["ureq", "rustls"]
check-all = ["electron", "jni"]
call_sim = ["call_protobuf/call_sim", "native", "injectable_network", "bitvec", "chrono", "clap", "fern", "tokio", "tonic", "tonic-prost", "tower", "sim_http"]
direct = ["native", "simnet", "chrono", "clap"]
virtual_audio = []

[[test]]
name = "incoming"
path = "tests/incoming.rs"
required-features = ["sim"]

[[test]]
name = "outgoing"
path = "tests/outgoing.rs"
required-features = ["sim"]

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.21.1", default-features = false }

[dev-dependencies]
uuid = { version = "1.19.0" }
env_logger = { version = "0.11.8" }
rand_chacha = { version = "0.3.1" }
libsignal-core = { git = "https://github.com/signalapp/libsignal", tag = "v0.86.7" }
