#
# Copyright 2023 Signal Messenger, LLC
# SPDX-License-Identifier: AGPL-3.0-only
#

[workspace]

[package]
name = "signaling_server"
version = "0.1.0"
authors = ["Calling Team <callingteam@signal.org>"]
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
async-stream = "0.3.5"
protobuf = { path = "../../../protobuf", features = ["call_sim"] }
env_logger = "0.11.3"
futures-core = "0.3.30"
futures-util = "0.3.30"
log = "0.4.22"
prost = "0.12.6"
rand = "0.8.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.1", features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
tokio-stream = "0.1.15"
tonic = "0.11.0"
