#
# Copyright 2023 Signal Messenger, LLC
# SPDX-License-Identifier: AGPL-3.0-only
#

[workspace]

[package]
name = "signaling_server"
version = "0.1.0"
authors = ["Calling Team <callingteam@signal.org>"]
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
async-stream = "0.3.6"
protobuf = { path = "../../../protobuf", features = ["call_sim"] }
env_logger = "0.11.5"
futures-core = "0.3.31"
futures-util = "0.3.31"
log = "0.4.22"
prost = "0.13.3"
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
tokio-stream = "0.1.16"
tonic = "0.12.3"
