#
# Copyright 2023 Signal Messenger, LLC
# SPDX-License-Identifier: AGPL-3.0-only
#

[workspace]

[package]
name = "signaling_server"
version = "0.1.0"
authors = ["Calling Team <callingteam@signal.org>"]
edition = "2024"
license = "AGPL-3.0-only"

[dependencies]
protobuf = { path = "../../../protobuf", features = ["call_sim"] }
env_logger = "0.11.8"
futures-core = "0.3.31"
log = "0.4.29"
prost = "0.14.1"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
tokio-stream = "0.1.17"
tonic = "0.14.2"
tonic-prost = "0.14.2"
